# glRemix

./: .git-blame-ignore-revs
cmake/: shared_files.cmake  shim_helper.cmake
glRemixRenderer/: CMakeLists.txt  hlsl_compat.h  rt_app.cpp  rt_app.h  shared_structs.h  structs.h
glRemixRenderer/dx/: d3d12_context.cpp  d3d12_descriptor.h
glRemixRenderer/gl/: gl_command_utils.h  gl_driver.cpp  gl_driver.h  gl_matrix_stack.cpp  gl_matrix_stack.h  gl_state.h
glRemixRenderer/shaders/rt/: raytracing.hlsl
glRemixShim/: CMakeLists.txt  export_macros.h  frame_recorder.cpp  frame_recorder.h  framerecorder.h  gl_hooks.cpp  gl_loader.cpp  wgl_export_aliases.inl  wgl_exports.cpp
glRemixShim/scripts/: generate_gl_wrappers.py
shared/: gl_commands.h  gl_utils.h
